Updates (read extended description)
Updates are from https://github.com/vecnavium-pm-pl/PureChat/tree/571c59f3ce4fa7d5e1b106374bb98e7cb2b0d2a2 I was not able to do a PR due to the fact it would conflict with .poggit.yml / the CI so I pushed the updates in a different way.

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -7,10 +7,6 @@
 # - string
 version: "1.4.10-6"
 
-# Set default factions plugin for PureChat
-# - FactionsPro / null
-default-factions-plugin: FactionsPro
-
 # Enable this if you want to use per-world chat formats / per-world nametags for players
 # - true / false
 enable-multiworld-chat: false
@@ -21,22 +17,28 @@ enable-multiworld-chat: false
 # &a: Green, &b: Aqua, &c: Red, &d: Light Purple, &e: Yellow, &f: White
 # &k: Obfuscated, &l: Bold, &m: Strikethrough, &n: Underline, &o: Italic, &r: Reset
 
-# Available PureChat tags: {display_name}, {msg}, {fac_name}, {fac_rank}, {prefix}, {suffix}, {world}
+# Available PureChat tags
+# {display_name} Get the player's username.
+# {msg} Get the player's message.
+# {prefix} Get PurePerms Prefix of the rank.
+# {suffix} Get the PurePerms Suffix of the rank.
+# {world} Get the PurePerms world the player is in.
+
 groups:
   Guest:
-    chat: '&7[Guest] &f{fac_rank}{fac_name}&a {display_name} &7> &f{msg}'
+    chat: '&7[Guest] {display_name} &7> &f{msg}'
     nametag: '&7[Guest] &f{display_name}'
     worlds: []
   Admin:
-    chat: '&c[Admin] &7{fac_rank}{fac_name}&6 {display_name} &d>&b {msg}'
-    nametag: '&a[Admin]&e {fac_rank}{fac_name} &6{display_name}'
+    chat: '&c[Admin]  {display_name} &d>&b {msg}'
+    nametag: '&a[Admin]&e &6{display_name}'
     worlds: []
   Owner:
-    chat: '&d[Owner] &c{fac_rank}{fac_name} &b{display_name} &c>&6> &b{msg}'
-    nametag: '&d[Owner]&c {fac_rank}{fac_name} &b{display_name}'
+    chat: '&d[Owner]  &b{display_name} &c>&6> &b{msg}'
+    nametag: '&d[Owner]&c &b{display_name}'
     worlds: []
   OP:
-    chat: '&a[OP] &5{fac_rank}{fac_name}&b {prefix}{display_name}{suffix} &c>&6> &f{msg}'
-    nametag: '&a[OP] &c{fac_rank}{fac_name} &b{display_name}'
+    chat: '&a[OP] &{prefix}{display_name}{suffix} &c>&6> &f{msg}'
+    nametag: '&a[OP] &b{display_name}'
     worlds: []
 ...
